water_pumps_project

--- a/water_pumps_project.ipynb
+++ b/water_pumps_project.ipynb
@@ -1337,7 +1337,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "**Final note**: there are many intermedite steps missing from this notebook where I was testing a number of different approaches in different notebooks. My first approach was simply to one hot encode the low cardinality categoricals (including the missing values) and factorize the object columns. This feature approach did not translate well to tree-based models however. After spending almost a full day engineering features to see my score go up locally, but not generalize well to the outside world, I got help from a few colleagues. My new feature engineering approach along with a relatively tight model that generalized well to out of sample data resulted in roughly ~.80 cross validated accuracy."
+        "**Final note**: there are many intermedite steps missing from this notebook where I was testing a number of different approaches in different notebooks. My first approach was simply to one hot encode the low cardinality categoricals (including the missing values) and factorize the object columns. This feature engineering approach did not translate well to tree-based models however, and my model was overfitting by a large margin. After spending almost a full day engineering features to see my score go up locally, but not generalize well to the outside world, I got help from a few colleagues. My new feature engineering approach was a lot more robust to overfitting and the model was relatively tight and generalized well to out of sample data. This resulted in roughly ~.82 score on kaggle on 2 different sets of out-of-sample data. https://www.kaggle.com/c/ds2-predictive-modeling-challenge/leaderboard"
       ]
     }
   ]
