fixed some wording

--- a/water_pumps_project.ipynb
+++ b/water_pumps_project.ipynb
@@ -28,51 +28,9 @@
     },
     {
       "metadata": {
-        "id": "-firuUUShyOs",
-        "colab_type": "code",
-        "outputId": "403c1cc2-2dee-49ec-e1fa-fd32623a3f4e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 275
-        }
-      },
-      "cell_type": "code",
-      "source": [
-        "!pip install category_encoders"
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting category_encoders\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f7/d3/82a4b85a87ece114f6d0139d643580c726efa45fa4db3b81aed38c0156c5/category_encoders-1.3.0-py2.py3-none-any.whl (61kB)\n",
-            "\r\u001b[K    16% |█████▍                          | 10kB 17.4MB/s eta 0:00:01\r\u001b[K    33% |██████████▊                     | 20kB 4.5MB/s eta 0:00:01\r\u001b[K    50% |████████████████                | 30kB 6.5MB/s eta 0:00:01\r\u001b[K    66% |█████████████████████▍          | 40kB 4.3MB/s eta 0:00:01\r\u001b[K    83% |██████████████████████████▊     | 51kB 5.2MB/s eta 0:00:01\r\u001b[K    100% |████████████████████████████████| 61kB 5.5MB/s \n",
-            "\u001b[?25hRequirement already satisfied: statsmodels>=0.6.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (0.8.0)\n",
-            "Requirement already satisfied: scikit-learn>=0.17.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (0.20.3)\n",
-            "Requirement already satisfied: pandas>=0.20.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (0.22.0)\n",
-            "Requirement already satisfied: scipy>=0.17.0 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (1.1.0)\n",
-            "Requirement already satisfied: patsy>=0.4.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (0.5.1)\n",
-            "Requirement already satisfied: numpy>=1.11.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders) (1.14.6)\n",
-            "Requirement already satisfied: python-dateutil>=2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.20.1->category_encoders) (2.5.3)\n",
-            "Requirement already satisfied: pytz>=2011k in /usr/local/lib/python3.6/dist-packages (from pandas>=0.20.1->category_encoders) (2018.9)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from patsy>=0.4.1->category_encoders) (1.11.0)\n",
-            "Installing collected packages: category-encoders\n",
-            "Successfully installed category-encoders-1.3.0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "metadata": {
         "id": "_apZoEHzJGf4",
         "colab_type": "code",
-        "outputId": "40b816b4-c2ce-45e0-8f2a-cd59a16dd1a5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 765
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -81,59 +39,8 @@
         "!wget https://raw.githubusercontent.com/DimaKav/Tanzanian_waterpumps_project/master/train_features.csv\n",
         "!wget https://raw.githubusercontent.com/DimaKav/Tanzanian_waterpumps_project/master/train_labels.csv"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "--2019-03-15 14:28:43--  https://raw.githubusercontent.com/DimaKav/Tanzanian_waterpumps_project/master/sample_submission.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 241972 (236K) [text/plain]\n",
-            "Saving to: ‘sample_submission.csv’\n",
-            "\n",
-            "sample_submission.c 100%[===================>] 236.30K  --.-KB/s    in 0.04s   \n",
-            "\n",
-            "2019-03-15 14:28:48 (5.79 MB/s) - ‘sample_submission.csv’ saved [241972/241972]\n",
-            "\n",
-            "--2019-03-15 14:28:50--  https://raw.githubusercontent.com/DimaKav/Tanzanian_waterpumps_project/master/test_features.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 4851589 (4.6M) [text/plain]\n",
-            "Saving to: ‘test_features.csv’\n",
-            "\n",
-            "test_features.csv   100%[===================>]   4.63M  29.6MB/s    in 0.2s    \n",
-            "\n",
-            "2019-03-15 14:28:50 (29.6 MB/s) - ‘test_features.csv’ saved [4851589/4851589]\n",
-            "\n",
-            "--2019-03-15 14:28:51--  https://raw.githubusercontent.com/DimaKav/Tanzanian_waterpumps_project/master/train_features.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 20054664 (19M) [text/plain]\n",
-            "Saving to: ‘train_features.csv’\n",
-            "\n",
-            "train_features.csv  100%[===================>]  19.12M  --.-KB/s    in 0.1s    \n",
-            "\n",
-            "2019-03-15 14:28:51 (132 MB/s) - ‘train_features.csv’ saved [20054664/20054664]\n",
-            "\n",
-            "--2019-03-15 14:28:52--  https://raw.githubusercontent.com/DimaKav/Tanzanian_waterpumps_project/master/train_labels.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 1148327 (1.1M) [text/plain]\n",
-            "Saving to: ‘train_labels.csv’\n",
-            "\n",
-            "train_labels.csv    100%[===================>]   1.09M  --.-KB/s    in 0.06s   \n",
-            "\n",
-            "2019-03-15 14:28:52 (17.3 MB/s) - ‘train_labels.csv’ saved [1148327/1148327]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -190,7 +97,7 @@
         "train_features.shape, train_labels.shape, test_features.shape, \\\n",
         "sample_submission.shape, df.shape"
       ],
-      "execution_count": 75,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -231,7 +138,7 @@
       "source": [
         "train_features.head(3)"
       ],
-      "execution_count": 76,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -500,7 +407,7 @@
         "# Distribution of water pump status\n",
         "train_labels['status_group'].value_counts().sort_values(ascending=False).plot(kind='pie');"
       ],
-      "execution_count": 77,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -534,7 +441,7 @@
       "source": [
         "train_labels['status_group'].value_counts(normalize=True)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,7 +491,7 @@
         "# Top 4 positive correlations\n",
         "print('Positive corrs:\\n',c.corr()['status_group'].sort_values()[-6:-2])"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -628,7 +535,7 @@
       "source": [
         "msno.matrix(train_features,figsize=(15, 10));"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -655,7 +562,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Looks like funder and installer have the same exact missing value locations, so we can use the same imputation strategy for both."
+        "Looks like funder and installer have the very similar locations of missing values, so we can use the similar imputation strategies for both."
       ]
     },
     {
@@ -672,7 +579,7 @@
       "source": [
         "msno.heatmap(train_features,figsize=(6, 3));"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -700,7 +607,7 @@
       "cell_type": "markdown",
       "source": [
         "<1 in the missing value correlation matrix indicate that there are only a few values\n",
-        "that are not correlated. We can also see in the matrix that funder and permit as well as installer and permit missing values are higly correlated (70%). Permit nan's are highly correlated with funder and installer as well, we can probably get away with the same imputation strategy for all 3 column's missing values."
+        "that are not correlated. We can also see in the matrix that funder and permit as well as installer and permit missing values are higly correlated (70%). Permit nan's are highly correlated with funder and installer as well, we can probably get away with the similar imputation strategies for all 3 column's missing values."
       ]
     },
     {
@@ -717,18 +624,18 @@
       "metadata": {
         "id": "uiCCBl8g2rzw",
         "colab_type": "code",
+        "outputId": "75349032-8a2a-494d-bc6d-91807826e783",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "75349032-8a2a-494d-bc6d-91807826e783"
+        }
       },
       "cell_type": "code",
       "source": [
         "# Check for nulls\n",
         "df.isna().sum().sort_values()[-10:]"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -772,18 +679,18 @@
       "metadata": {
         "id": "8EQG0mBe2rso",
         "colab_type": "code",
+        "outputId": "8adccadb-2664-48fe-e2d1-163ccd723952",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "8adccadb-2664-48fe-e2d1-163ccd723952"
+        }
       },
       "cell_type": "code",
       "source": [
         "# Top 10 features with the highest cardinality\n",
         "df.nunique().sort_values()[-10:]"
       ],
-      "execution_count": 79,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -823,11 +730,11 @@
       "metadata": {
         "id": "B1Akc_Xj2rpI",
         "colab_type": "code",
+        "outputId": "72305be9-bcb6-406f-9586-54f121bddf5b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "72305be9-bcb6-406f-9586-54f121bddf5b"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -837,7 +744,7 @@
         "df.drop(high_card,inplace=True,axis=1)\n",
         "df.shape"
       ],
-      "execution_count": 80,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -857,11 +764,11 @@
       "metadata": {
         "id": "YpHIFOSp2rh4",
         "colab_type": "code",
+        "outputId": "628d9800-579f-4ab6-b25d-e2fd3e0243ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "628d9800-579f-4ab6-b25d-e2fd3e0243ab"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -869,7 +776,7 @@
         "df = pd.get_dummies(df, drop_first=True, dummy_na=True)\n",
         "df.shape"
       ],
-      "execution_count": 81,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -899,18 +806,18 @@
       "metadata": {
         "id": "9fpPIlaL5yaD",
         "colab_type": "code",
+        "outputId": "40287d84-660c-4d63-9671-c53fe23a8a1b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "40287d84-660c-4d63-9671-c53fe23a8a1b"
+        }
       },
       "cell_type": "code",
       "source": [
         "# Check for large variance\n",
         "df.var().round().sort_values().round()[-5:]"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -935,18 +842,18 @@
       "metadata": {
         "id": "kA9TG6ki6SA2",
         "colab_type": "code",
+        "outputId": "e227a1c7-195a-4f67-dbb3-0f73a9d132ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "e227a1c7-195a-4f67-dbb3-0f73a9d132ad"
+        }
       },
       "cell_type": "code",
       "source": [
         "# Check for large means\n",
         "df.mean().round().sort_values().round()[-5:]"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -981,11 +888,11 @@
       "metadata": {
         "id": "TqZjzzmV6lMC",
         "colab_type": "code",
+        "outputId": "c66a9b73-049d-4d1d-9d72-6d0d9c84a206",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c66a9b73-049d-4d1d-9d72-6d0d9c84a206"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1000,7 +907,7 @@
         "pca_df = pd.DataFrame(principalComponents)\n",
         "pca_df.shape"
       ],
-      "execution_count": 82,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1030,11 +937,11 @@
       "metadata": {
         "id": "fr1KBz0r6lSC",
         "colab_type": "code",
+        "outputId": "f31c3e91-c98d-42a2-81da-234c8a2099e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f31c3e91-c98d-42a2-81da-234c8a2099e9"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1044,7 +951,7 @@
         "X_test = pca_df[-14358:]\n",
         "y_train.shape, X_train.shape, X_test.shape"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1064,11 +971,11 @@
       "metadata": {
         "id": "rmhVs6dy6lV7",
         "colab_type": "code",
+        "outputId": "e433539b-bd81-44d8-d2b0-9e9b7309cd6f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "e433539b-bd81-44d8-d2b0-9e9b7309cd6f"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1080,7 +987,7 @@
         "print(\"Score without cv:\",baseline_model.score(X_train, y_train))\n",
         "print('Score with 3-fold cv:',cross_val_score(baseline_model, X_train, y_train, cv=3).mean())"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1116,11 +1023,11 @@
       "metadata": {
         "id": "8zjWvZUWHpiL",
         "colab_type": "code",
+        "outputId": "849f3cd8-212e-446d-8717-43faeaf9fa5d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "849f3cd8-212e-446d-8717-43faeaf9fa5d"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1135,7 +1042,7 @@
         "train_features.shape, train_labels.shape, test_features.shape, \\\n",
         "sample_submission.shape, df.shape"
       ],
-      "execution_count": 57,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1155,11 +1062,11 @@
       "metadata": {
         "id": "O-hHr_2QzQfT",
         "colab_type": "code",
+        "outputId": "b2896eeb-4284-471a-cb87-fa13cf291465",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b2896eeb-4284-471a-cb87-fa13cf291465"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1216,7 +1123,7 @@
         "del df['id']\n",
         "df.shape"
       ],
-      "execution_count": 58,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1236,11 +1143,11 @@
       "metadata": {
         "id": "lx1J-sNfwCx9",
         "colab_type": "code",
+        "outputId": "96c332ce-f1db-4580-fdaa-475e95e49ef3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "96c332ce-f1db-4580-fdaa-475e95e49ef3"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1255,7 +1162,7 @@
         "X_test = df[-14358:]\n",
         "y_train.shape, X_train.shape, X_test.shape"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1275,11 +1182,11 @@
       "metadata": {
         "id": "k6NMNj6Nom2D",
         "colab_type": "code",
+        "outputId": "334240d0-ba59-4989-a9ba-a02678ca61f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "334240d0-ba59-4989-a9ba-a02678ca61f8"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1300,7 +1207,7 @@
         "model = xgb.fit(X_train, y_train)\n",
         "print('Score with 2-fold cv:',cross_val_score(model, X_train, y_train, cv=2).mean())"
       ],
-      "execution_count": 73,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
