added baseline model 2

--- a/water_pumps_project.ipynb
+++ b/water_pumps_project.ipynb
@@ -78,7 +78,7 @@
       "metadata": {
         "id": "GYNK8pABJG7J",
         "colab_type": "code",
-        "outputId": "347beac5-1e1f-4f77-ace3-09edb7ba5a8d",
+        "outputId": "bca90963-9f9f-4685-c84e-56426ea05df9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -91,13 +91,12 @@
         "train_labels = pd.read_csv('train_labels.csv')\n",
         "test_features = pd.read_csv('test_features.csv')\n",
         "sample_submission = pd.read_csv('sample_submission.csv')\n",
-        "\n",
         "# Make combined df for easier processing\n",
         "df = pd.concat([train_features, test_features])\n",
         "train_features.shape, train_labels.shape, test_features.shape, \\\n",
         "sample_submission.shape, df.shape"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -109,7 +108,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 75
+          "execution_count": 14
         }
       ]
     },
@@ -617,7 +616,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# Baseline model"
+        "# Baseline model 1"
       ]
     },
     {
@@ -730,7 +729,7 @@
       "metadata": {
         "id": "B1Akc_Xj2rpI",
         "colab_type": "code",
-        "outputId": "72305be9-bcb6-406f-9586-54f121bddf5b",
+        "outputId": "259075cb-387b-44da-92a3-6fd0ffe44fbe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -744,19 +743,19 @@
         "df.drop(high_card,inplace=True,axis=1)\n",
         "df.shape"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(73758, 31)"
+              "(73758, 32)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 80
+          "execution_count": 15
         }
       ]
     },
@@ -1011,12 +1010,95 @@
     },
     {
       "metadata": {
+        "id": "JUEodUAb_VRx",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# Baseline model 2"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "KWGnW7SI_XMw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "d3833d41-2975-4dbe-d639-9c18378132f7"
+      },
+      "cell_type": "code",
+      "source": [
+        "# Reload the original data\n",
+        "df = pd.concat([train_features, test_features])\n",
+        "\n",
+        "# Drop scheme name, it's missing close to 50% of the rows\n",
+        "del df['scheme_name']\n",
+        "del df['id']\n",
+        "\n",
+        "# One hot encode the low cardinality categoricals\n",
+        "dummies = [\n",
+        "'basin', 'public_meeting', 'recorded_by', 'permit', 'extraction_type_class', \n",
+        "'management_group', 'payment', 'payment_type', \n",
+        "'water_quality', 'quality_group', 'quantity', 'quantity_group', 'source', \n",
+        "'source_type', 'source_class', 'waterpoint_type', 'waterpoint_type_group'\n",
+        "]\n",
+        "df = pd.get_dummies(df, drop_first=True, columns=dummies, dummy_na=True)\n",
+        "\n",
+        "# Factorize the na cols\n",
+        "na_cols = ['funder','installer','subvillage','scheme_management']\n",
+        "df[na_cols] = df[na_cols].apply(lambda x: pd.factorize(x)[0])\n",
+        "\n",
+        "# Encode the resst of the categories with Label encoder\n",
+        "encoder = LabelEncoder()\n",
+        "object_cols = df.select_dtypes('object').columns\n",
+        "df[object_cols] = df[object_cols].apply(encoder.fit_transform)\n",
+        "print('Shape of data without PCA:',df.shape)\n",
+        "\n",
+        "# Change all numerics to float64 for better processing when scaling\n",
+        "numeric = df.select_dtypes(exclude='object').columns\n",
+        "df[numeric] = df[numeric].astype('float64')\n",
+        "\n",
+        "# Reduce dimensionality with PCA instance to preserve 99.9% of the variance\n",
+        "X_std = StandardScaler().fit_transform(df)\n",
+        "pca = PCA(n_components=.999)\n",
+        "principalComponents = pca.fit_transform(X_std)\n",
+        "\n",
+        "# Save components to a DataFrame\n",
+        "pca_df = pd.DataFrame(principalComponents)\n",
+        "print('Shape of data with PCA:',pca_df.shape)\n",
+        "\n",
+        "# Split the data back into training and testing sets\n",
+        "y_train = train_labels['status_group']\n",
+        "X_train = pca_df[:-14358]\n",
+        "X_test = pca_df[-14358:]\n",
+        "\n",
+        "# Instantiate a logistic regression classifier and get a cross validated accuracy score\n",
+        "logreg = LogisticRegression(solver='lbfgs', multi_class='multinomial', max_iter=500)\n",
+        "print('Score with 3-fold cv:',cross_val_score(logreg, X_train, y_train, cv=3).mean())"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Shape of data without PCA: (73758, 118)\n",
+            "Shape of data with PCA: (73758, 72)\n",
+            "Score with 3-fold cv: 0.7253198653198654\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
         "id": "29iddnnK_rTL",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "# Fine-tuned model with feature engineering"
+        "# Fine-tuned model with additional feature engineering"
       ]
     },
     {
