--- a/water_pumps_project.ipynb
+++ b/water_pumps_project.ipynb
@@ -798,7 +798,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "That's a ton of new features, let's hope PCA can take of this."
+        "That's a ton of new features, let's hope PCA can care take of this."
       ]
     },
     {
